--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -14,18 +14,18 @@
   .input {
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 12px 20px 12px 42px;
-    width: 100%;
     min-width: 200px;
     border-radius: 10px;
     font-size: 16px;
     transition: all 0.15s ease-in-out;
+    z-index: 0;
+    width: 300px;
 
     &:focus {
       border: 1px solid rgba(0, 0, 0, 0.2);
-      width: 400px;
-      @media (max-width: 1150px) {
-        width: 100%;
-      }
+    }
+    @media (max-width: 1150px) {
+      width: 100%;
     }
   }
 
@@ -46,6 +46,7 @@
     right: 12px;
     top: 12px;
     cursor: pointer;
+    z-index: 10;
 
     &:hover {
       opacity: 0.8;
