add typeScript types

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -193,6 +193,28 @@ body {
             display: none;
           }
         }
+        &--disabled {
+          opacity: 0.4;
+          border-color: #7b7b7b;
+
+          svg {
+            path {
+              fill: #7b7b7b;
+            }
+            path:first-of-type {
+              display: none;
+            }
+          }
+          &:hover {
+            background-color: transparent;
+            svg path {
+              fill: #7b7b7b;
+            }
+          }
+          &:active {
+            transform: none;
+          }
+        }
       }
 
       b {
